--- a/shared/impl/src/main/res/values-nb-rNO/strings.xml
+++ b/shared/impl/src/main/res/values-nb-rNO/strings.xml
@@ -7,6 +7,20 @@
     <string name="cwf_comment_freetext2">Fritekst 2</string>
     <string name="cwf_comment_freetext3">Fritekst 3</string>
     <string name="cwf_comment_freetext4">Fritekst 4</string>
+    <string name="cwf_comment_patient_name_ext">Pasientnavn (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_iob1_ext">IOB-etikett eller IOB-sum hvis detaljert (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_iob2_ext">IOB-sum (Bolus_IOB|Basal_IOB) hvis detaljert (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_cob2_ext">COB-verdi (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_delta_ext">Kort BS-delta (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_avg_delta_ext">Gjennomsnittlig BS-delta (15min) (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_rig_battery_ext">Global loop-batteri (%) (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_basalRate_ext">Basaldose (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_bgi_ext">BGI-verdi (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_status_ext">Statussyntese (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_loop_ext">Loopstatus og tid siden (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_direction_ext">Retningspil (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_sgv_ext">BS-verdi (fra AAPSClient eller AAPSClient2)</string>
+    <string name="cwf_comment_patient_name">Pasientnavn</string>
     <string name="cwf_comment_iob1">IOB-merkelapp eller IOB-sum hvis angitt</string>
     <string name="cwf_comment_iob2">IOB-sum eller (Bolus_IOB|Basal_IOB) hvis angitt</string>
     <string name="cwf_comment_cob1">COB-merkelapp</string>
