--- a/plugins/configuration/src/main/res/values-cs-rCZ/strings.xml
+++ b/plugins/configuration/src/main/res/values-cs-rCZ/strings.xml
@@ -19,6 +19,7 @@
     <string name="permission">Povolení</string>
     <string name="need_system_window_permission">Pro oznámení vyžaduje aplikace oprávnění systémového okna</string>
     <string name="need_location_permission">Aplikace potřebuje oprávnění k přístupu k poloze kvůli skenování BT a WiFi identifikaci</string>
+    <string name="need_background_location_permission">Aplikace potřebuje na pozadí oprávnění k přístupu k poloze zařízení kvůli automatizacím</string>
     <string name="need_storage_permission">Aby bylo možné nahrávat logy a exportovat nastavení, je nutné pro aplikaci povolit oprávnění přístupu k úložišti</string>
     <string name="askforpermission">Získat povolení</string>
     <string name="need_whitelisting">%1$s potřebuje vypnout optimalizace baterie pro optimální výkon</string>
@@ -93,6 +94,8 @@
     <string name="check_preferences_import_btn">Import</string>
     <string name="check_preferences_import_anyway_btn">Přesto importovat (NEBEZPEČNÉ!)</string>
     <string name="import_setting">Importovat nastavení</string>
+    <string name="aaps_directory">Adresář AAPS</string>
+    <string name="select_aaps_directory">Vyberte adresář AAPS pro ukládání exportů, konfigurací atd.</string>
     <string name="check_preferences_before_import">Před importem zkontrolujte předvolby:</string>
     <string name="check_preferences_cannot_import">Předvolby nelze importovat!</string>
     <string name="check_preferences_dangerous_import">Předvolby by neměly být importovány!</string>
@@ -155,8 +158,6 @@
     <string name="prefdecrypt_issue_wrong_algorithm">Nepodporovaný nebo neurčený šifrovací algoritmus!</string>
     <!-- Custom Watchface -->
     <string name="wear_import_custom_watchface_title">Vyberte vlastní ciferník</string>
-    <!-- Permissions -->
-    <string name="alert_dialog_storage_permission_text">Prosím restartujte Váš telefon nebo restartujte AAPS z nastavení systému\njinak nebudou zaznamenány ladící informace (důležité pro sledování a kontrolu, zda algoritmus pracuje správně)!</string>
     <!-- Maintenance -->
     <string name="metadata_label_format">Formát souboru</string>
     <string name="metadata_label_created_at">Vytvořeno</string>
