--- a/plugins/configuration/src/main/res/values-nb-rNO/strings.xml
+++ b/plugins/configuration/src/main/res/values-nb-rNO/strings.xml
@@ -19,6 +19,7 @@
     <string name="permission">Tillatelse</string>
     <string name="need_system_window_permission">App trenger tillatelse til å bruke varslinger for å vise meldinger</string>
     <string name="need_location_permission">App trenger tilgang til posisjon for å søke etter Bluetooth og Wifi-enheter</string>
+    <string name="need_background_location_permission">Appen trenger bakgrunnsposisjonstillatelser for automasjoner</string>
     <string name="need_storage_permission">App trenger tilgang til lagring for lagre loggfiler og eksportere innstillinger</string>
     <string name="askforpermission">Spør om tillatelse</string>
     <string name="need_whitelisting">%1$s trenger tillatelse til å omgå batterisparefunksjonene slik at appen fungerer tilfredsstillende</string>
@@ -93,6 +94,8 @@
     <string name="check_preferences_import_btn">Importer</string>
     <string name="check_preferences_import_anyway_btn">Importer uansett (FARLIG!)</string>
     <string name="import_setting">Importer innstillinger</string>
+    <string name="aaps_directory">AAPS-mappe</string>
+    <string name="select_aaps_directory">Velg AAPS-mappe for lagring av eksport av innstillinger, konfigurasjoner etc.</string>
     <string name="check_preferences_before_import">Vennligst sjekk innstillingene før du importerer:</string>
     <string name="check_preferences_cannot_import">Innstillingene kan ikke importeres!</string>
     <string name="check_preferences_dangerous_import">Innstillingene bør ikke importeres!</string>
@@ -155,8 +158,6 @@
     <string name="prefdecrypt_issue_wrong_algorithm">Ugyldig eller ikke spesifisert krypteringsalgoritme!</string>
     <!-- Custom Watchface -->
     <string name="wear_import_custom_watchface_title">Velg tilpasset urskive</string>
-    <!-- Permissions -->
-    <string name="alert_dialog_storage_permission_text">Vennligst start mobilen på nytt eller restart AAPS fra Innstillinger \nellers vil ikke AAPS ha aktivert loggføring (viktig for å spore og kontrollere at algoritmene fungerer riktig)!</string>
     <!-- Maintenance -->
     <string name="metadata_label_format">Filformat</string>
     <string name="metadata_label_created_at">Opprettet den</string>
