Wear Add User Action Tiles

--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="label_actions_tile">AAPS(Actions)</string>
     <string name="label_temp_target_tile">AAPS(Temp Target)</string>
     <string name="label_quick_wizard_tile">AAPS(Quick Wizard)</string>
+    <string name="label_user_action_tile">AAPS(User Action)</string>
     <string name="label_warning_sync">No data!</string>
     <string name="label_warning_old">Old data!</string>
     <string name="label_warning_since">Since %1$s</string>
@@ -98,6 +99,7 @@
     <string name="action_duration">Duration</string>
     <string name="action_tempt_confirmation">Temp Target Requested</string>
     <string name="action_quick_wizard_confirmation">Quick Wizard Requested</string>
+    <string name="action_user_action_confirmation">User Action Requested</string>
     <string name="action_treatment_confirmation">Treatment Requested</string>
     <string name="action_bolus_confirmation">Bolus Requested</string>
     <string name="action_wizard_confirmation">Calculation Requested</string>
@@ -190,6 +192,7 @@
     <string name="key_treatments_safety_max_carbs" translatable="false">treatmentssafety_maxcarbs</string>
     <string name="key_treatments_safety_max_bolus" translatable="false">treatmentssafety_maxbolus</string>
     <string name="key_quick_wizard_data" translatable="false">quick_wizard_data</string>
+    <string name="key_user_action_data" translatable="false">user_action_data</string>
     <string name="key_prime_fill" translatable="false">primefill</string>
     <string name="key_show_wizard" translatable="false">showWizard</string>
     <string name="key_single_target" translatable="false">singletarget</string>
