--- a/plugins/sync/src/main/res/values/strings.xml
+++ b/plugins/sync/src/main/res/values/strings.xml
@@ -191,6 +191,8 @@
     <string name="wear_settings">Wear settings</string>
     <string name="wearcontrol_title">Controls from Watch</string>
     <string name="wearcontrol_summary">Set Temp-Targets and enter Treatments from the watch.</string>
+    <string name="wear_broadcast_data">Broadcast data</string>
+    <string name="wear_broadcast_data_summary">Broadcast data to AAPS or AAPSClient</string>
     <string name="wear_wizard_settings_summary">Calculations included in the Wizard result:</string>
     <string name="wear_general_settings">General Settings</string>
     <string name="wear_notifysmb_title">Notify on SMB</string>
